--- a/_includes/teaser.liquid
+++ b/_includes/teaser.liquid
@@ -1,4 +1,8 @@
 <li>
   {{ t.data.label }}
   {{ t.templateContent }}
+  <img
+    src="{{ "/img/" | append: t.data.logo | url }}"
+    width="200"
+    alt="">   
 </li>
